--- a/module-admin/src/main/resources/templates/layout/head.html
+++ b/module-admin/src/main/resources/templates/layout/head.html
@@ -48,15 +48,14 @@
         <!-- Style.css -->
         <link rel="stylesheet" type="text/css" th:href="@{/files/assets/css/style.css}">
         <link rel="stylesheet" type="text/css" th:href="@{/files/assets/css/jquery.mCustomScrollbar.css}">
-        <link rel="stylesheet" type="text/css" th:href="@{/js/common/jsgrid-master/dist/jsgrid.min.css}" />
-        <link rel="stylesheet" type="text/css" th:href="@{/js/common/jsgrid-master/dist/jsgrid-theme.css}" />
-        <link rel="stylesheet" type="text/css" th:href="@{/css/jgrid/jquery-ui.css}">
-        <link rel="stylesheet" type="text/css" th:href="@{/css/jgrid/jquery-ui.structure.css}">
-        <link rel="stylesheet" type="text/css" th:href="@{/css/jgrid/jquery-ui.theme.css}">
 
         <!-- 관리자 임의 추가 css -->
         <link rel="stylesheet" type="text/css" th:href="@{/css/admin.common.css}">
         <script type="text/javascript" th:src="@{/files/bower_components/jquery/dist/jquery.min.js}"></script>
+
+        <!-- Data tables-->
+        <link rel="stylesheet" type="text/css" th:href="@{/files/bower_components/datatables.net-dt/css/jquery.dataTables.css}">
+
     </head>
 </th:block>
 </html>
