--- a/module-admin/src/main/resources/static/files/assets/scss/partials/theme-elements/_form-elements.scss
+++ b/module-admin/src/main/resources/static/files/assets/scss/partials/theme-elements/_form-elements.scss
@@ -28,7 +28,10 @@
 }
 
 .form-control {
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 26px;
+    color: #171a19;
     border-radius: 2px;
     border: 1px solid rgb(204, 204, 204);
 
@@ -480,6 +483,7 @@ $radio-bg-color: $primary-color, $warning-color, $default-color, $danger-color, 
             }
 
             &:before {
+                border-radius: 100%;
                 content: "";
                 display: block;
                 border: 2px solid $primary-color;
