--- a/module-admin/src/main/resources/static/files/assets/scss/partials/theme-elements/_form-elements.scss
+++ b/module-admin/src/main/resources/static/files/assets/scss/partials/theme-elements/_form-elements.scss
@@ -316,10 +316,9 @@ $form-valid-color: $success-color, $warning-color, $danger-color;
             content: '';
             position: absolute;
             left: 0;
-            top: 3px;
             margin: 0.25rem;
-            width: 1rem;
-            height: 1rem;
+            width: 20px;
+            height: 20px;
             -webkit-transition: -webkit-transform 0.28s ease;
             transition: -webkit-transform 0.28s ease;
             transition: transform 0.28s ease, -webkit-transform 0.28s ease;
